@@ -38,7 +38,7 @@ static int blk_rw(struct inode *inode,
      *      Offset to block/offset
      */
 
-    block = filp->f_pos >> 10;
+    block = ((block_t) filp->f_pos) >> 10;
     offset = filp->f_pos & (BLOCK_SIZE - 1);
 
     while (count > 0) {
