@@ -30,3 +30,4 @@ extern void setup_mm(void);
 extern void device_setup(void);
 
 extern void kfork_proc(struct task_struct *,void ());
+extern void arch_setup_kernel_stack(struct task_struct *);
